# kw1fox-1

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  test.py
.github/workflows/: build_containers.yml  docker_workflow.yml  kw1fox-1_checks.yml
Houston-Direwolf/: Dockerfile  direwolf.conf  entrypoint.sh
Houston-SSTV/: Dockerfile  README.md  entrypoint.sh  qsstv_9.0.conf
Houston-SSTV/pulse/: default.pa  pulse-client.conf
Houston-SSTV/streamer/: CMakeLists.txt  example.cpp  main.cpp
Houston-Sim/: World.tscn  icon.svg.import  project.godot
Houston-Streamer/: RobotStreamer.py  entrypoint.sh  requirements.txt  test.py
Houston-Streamer/testing/: Pipfile  test.py
Houston-UI/: Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
Houston-UI/app/: app.py
MC-Core/: Dockerfile  entrypoint.sh
MC-Streamer/: .env  Dockerfile  README.md  RobotStreamer.py  docker-compose.yml  entrypoint.sh  requirements.txt
MC-UI/: Dockerfile  Makefile  README.md  requirements.txt  ui.py
MissionController/: entrypoint.sh  requirements.txt
RS-Connector/: Dockerfile  requirements.txt  rsConnector.py
RS-Streamer/: test.py
houston/: Makefile  Pipfile  RobotStreamer.py  robotstreamer.service  stream.sh
resources/: Buttons.json
robot_bridge/: Makefile  Pipfile  RobotBridge.py  client_test.py  payload_test.py  robot_bridge.service  robot_bridge.sh
sstv/: Makefile  qsstv.service  sstv.sh
static/: Robot Network Structure.drawio
tools/: framecatch.py
(+33 files in other folders)
